2006-11-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/29734
	* cp-tree.h (WANT_VECTOR): Define.
	(WANT_ARITH): Add WANT_VECTOR.
	* cvt.c (build_expr_type_conversion): Handle vector types.
	* typeck.c (build_unary_op): Add WANT_VECTOR to
	build_expr_type_conversion flags.

2006-11-13  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29106
	* init.c (constant_value_1): Treat a DECL_INITIAL of
	error_mark_node as meaning that the variable is uninitialized,
	rather than erroneously initialized.

	PR c++/29518
	* pt.c (coerce_template_parms): Do not skip_evaluation while
	substituting template arguments.

2006-10-22  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/20647
	* rtti.c (tinfo_base_init): The type info string is always global.

2006-10-18  Mark Shinwell  <shinwell@codesourcery.com>

	PR c++/26884
	* typeck2.c (digest_init): Raise error upon attempts to
	initialize arrays with variables.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	PR C++/25878
	Backport from mainline:
	2006-08-25  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/27787
	* decl.c (make_typename_type): Only try and resolve it when
	context is not dependent.  Refactor.
	* decl2.c (check_classfn): Push to class scope before looking for
	the function.

2006-10-17  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-09-07  Andrew Pinski  <pinskia@physics.uc.edu>

	PR C++/28906
	* init.c (build_new_1): Build a distinct type copy
	for the array type that was returned from
	build_cplus_array_type.

2006-10-16  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29435
	* typeck.c (cxx_sizeof_or_alignof_type): Complete non-dependent
	types when their sizes are required.  Refine test for VLAs.

2006-10-16  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29408
	* parser.c (cp_parser_using_declaration): Stop parsing when
	something goes wrong with an access declaration.

2006-10-14  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/29323